--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.2
+aiosignal==1.4.0
 annotated-types==0.7.0
 anyio==4.11.0
 attrs==25.4.0
@@ -11,19 +14,23 @@ chromadb==1.2.1
 click==8.3.0
 colorama==0.4.6
 coloredlogs==15.0.1
+dataclasses-json==0.6.7
 distro==1.9.0
 durationpy==0.10
 filelock==3.18.0
 flatbuffers==25.9.23
+frozenlist==1.8.0
 fsspec==2025.7.0
 google-auth==2.41.1
 googleapis-common-protos==1.71.0
+greenlet==3.2.4
 grpcio==1.76.0
 h11==0.16.0
 hf-xet==1.1.9
 httpcore==1.0.9
 httptools==0.7.1
 httpx==0.28.1
+httpx-sse==0.4.3
 huggingface-hub==0.34.3
 humanfriendly==10.0
 idna==3.10
@@ -37,8 +44,11 @@ jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
 kubernetes==34.1.0
 langchain==1.0.3
+langchain-classic==1.0.0
+langchain-community==0.4.1
 langchain-core==1.0.3
 langchain-huggingface==1.0.1
+langchain-text-splitters==1.0.0
 langgraph==1.0.2
 langgraph-checkpoint==3.0.1
 langgraph-prebuilt==1.0.2
@@ -46,9 +56,12 @@ langgraph-sdk==0.2.9
 langsmith==0.4.41
 markdown-it-py==4.0.0
 MarkupSafe==3.0.2
+marshmallow==3.26.1
 mdurl==0.1.2
 mmh3==5.2.0
 mpmath==1.3.0
+multidict==6.7.0
+mypy_extensions==1.1.0
 networkx==3.5
 numpy==2.3.2
 oauthlib==3.3.1
@@ -65,11 +78,13 @@ overrides==7.7.0
 packaging==25.0
 pillow==12.0.0
 posthog==5.4.0
+propcache==0.4.1
 protobuf==6.33.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pybase64==1.4.2
 pydantic==2.12.3
+pydantic-settings==2.12.0
 pydantic_core==2.41.4
 Pygments==2.19.2
 PyPika==0.48.9
@@ -80,7 +95,7 @@ python-dotenv==1.1.1
 PyYAML==6.0.2
 referencing==0.37.0
 regex==2025.7.34
-requests==2.32.4
+requests==2.32.5
 requests-oauthlib==2.0.0
 requests-toolbelt==1.0.0
 rich==14.2.0
@@ -94,6 +109,7 @@ setuptools==80.9.0
 shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
+SQLAlchemy==2.0.44
 sympy==1.14.0
 tenacity==9.1.2
 threadpoolctl==3.6.0
@@ -102,6 +118,7 @@ torch==2.8.0
 tqdm==4.67.1
 transformers==4.55.0
 typer==0.20.0
+typing-inspect==0.9.0
 typing-inspection==0.4.2
 typing_extensions==4.14.1
 urllib3==2.3.0
@@ -110,5 +127,6 @@ watchfiles==1.1.1
 websocket-client==1.9.0
 websockets==15.0.1
 xxhash==3.6.0
+yarl==1.22.0
 zipp==3.23.0
 zstandard==0.25.0
